# node_editor

./: .gitignore  CMakeLists.txt  Makefile  help.txt  vcpkg.json
include/: App.h  AudioInterface.h  ImWrap.h  Node.h  NodeDefs.h  TestModule.h  audio_evaluate.h  audio_interface.h  graph.h  imgui_helpers.h  j2s.h  myGui.h  my_interface.h  node_editor.h  node_editor2.h  output_module.h  test_module.h  xfader_module.h
modules/: EnvelopeGenerator.cpp  EnvelopeGenerator.h  Oscillator.h  adsr_module.cpp  adsr_module.h  jfilter_module.cpp  jfilter_module.h  lop_module.h  midi_in_module.cpp  midi_in_module.h  midiin_module.cpp  midiin_module.h  module.h  module_helper.cpp  module_helper.h  oscillator_module.cpp  oscillator_module.h  out2_module.h  output_module.cpp  test_module.cpp  test_module.h  vst3_midi_module.cpp  vst3_midi_module.h  xfader_module.cpp  xfader_module.h
src/: App.cpp  AudioInterface.cpp  ImWrap.cpp  Oscillator.cpp  audio_interface.cpp  color_node_editor.cpp  imgui_helpers.cpp  jfilter_module.cpp  main.cpp  midi_in_module.cpp  myGui.cpp  my_interface.cpp  output_module.cpp  test_module.cpp  xfader_module.cpp
